--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.8.1",
     "mongoose": "^8.6.1",
     "nodemon": "^3.1.4",
     "validator": "^13.12.0"
