add submit Quiz method

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "cSpell.words": [
         "addcourse",
+        "Quizes",
+        "Quizs",
+        "retrive",
+        "retrived",
         "updatecourse"
     ]
 }
