--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 CONNECTION_STRING = 'mongodb+srv://mophoeniiiix:ZK6AdzDw6PbK8YoN@cluster0.ob8d1.mongodb.net/ums?retryWrites=true&w=majority'
 secret="this_is_my_jwt_secret"
+PORT=3000
