- adding forgot and rest password methods and routes

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 CONNECTION_STRING = 'mongodb+srv://mophoeniiiix:ZK6AdzDw6PbK8YoN@cluster0.ob8d1.mongodb.net/ums?retryWrites=true&w=majority'
 secret="this_is_my_jwt_secret"
 PORT=3000
+MAILJET_API_KEY='3509b8424511b49f7f77c97af1e74044'
+MAILJET_API_SECRET='1d3be59ab9ebf2d3c9900fd19d5f13d4'
