--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A University management system to allow students to enroll in diffrent courses",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
