--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ secret="this_is_my_jwt_secret"
 PORT=3000
 MAILJET_API_KEY='3509b8424511b49f7f77c97af1e74044'
 MAILJET_API_SECRET='1d3be59ab9ebf2d3c9900fd19d5f13d4'
+CLOUDINARY_CLOUD_NAME=dqxtef4rh
+CLOUDINARY_API_KEY=345213771825714
+CLOUDINARY_API_SECRET=7t6dt640Wz-r9QClPGbemodb4AE
