--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "A University management system to allow students to enroll in diffrent courses",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -19,7 +20,8 @@
     "mongodb": "^6.8.1",
     "mongoose": "^8.6.1",
     "multer": "^1.4.4",
-    "multer-gridfs-storage": "^5.0.2",
+    "multer-gridfs-storage": "^1.3.0",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4",
     "uuid": "^10.0.0",
